Fix z-index on results in Home page

--- a/webui/src/pages/Home/styles.sass
+++ b/webui/src/pages/Home/styles.sass
@@ -53,6 +53,12 @@
   align-items: center
   gap: 1rem
 
+  .result-area
+    z-index: 0
+    display: flex
+    gap: 1rem
+    flex-direction: column
+
   h2
     margin: 0
 
